Crosshair feature added

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
 </head>
 <body>
-<div class="wrapper">
+<div class="wrapper stopscrollcontent">
 	<div id="flot"></div>
 	<div class="menu upper mainmenu upper_menu_close">
 		<div class="mainmenu_container menu_container">
@@ -290,6 +290,7 @@
 				</g>
 				</svg>
 				<div class="btn_grp">
+					<button class="today">Day</button>
 					<button class="now">Now</button>
 					<button class="set">Set</button>
 				</div>
