--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
 				 Show lines
 			</label>
 		</div>
+		<button class="cancel btn btn-default">close</button>
 	</script>
 
 	<script type="text/template" id="provider_template">
@@ -200,7 +201,7 @@
 	</script>
 </head>
 <body>
-<div class="wrapper stopscrollcontent">
+<div class="wrapper">
 	<div id="flot"></div>
 	<div class="menu upper mainmenu upper_menu_close">
 		<div class="mainmenu_container menu_container">
