--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
 	<link rel="stylesheet" href="styles/styles.css"></link>
 
 	<script src="contrib/jquery/jquery-1.9.1.js"></script>
+	<script src="contrib/jsonp/jsonp.js"></script>
 	<script src="contrib/hammerjs/hammer.min.js"></script>
 	<script src="contrib/hammerjs/hammer.fakemultitouch.js"></script>
-	<script type="text/javascript">
-		Hammer.plugins.fakeMultitouch();
-	</script>
 
 	<script src="contrib/bootstrap/js/bootstrap.min.js"></script>
 
@@ -49,6 +47,7 @@
 	<script src="lib/views/ProviderThingSpeakInitializeView.js"></script>
 	<script src="lib/views/ProviderXivelyInitializeView.js"></script>
 	<script src="lib/views/DevicesView.js"></script>
+	<script src="lib/views/ProviderDriverView.js"></script>
 	<script src="lib/views/ProviderView.js"></script>
 
 	<script src="contrib/flot/jquery.flot.js"></script>
@@ -62,143 +61,6 @@
 	<script src="lib/date_range.js"></script>
 	<script src="lib/views/MenuView.js"></script>
 	<script src="contrib/panelmenu/panelmenu.js"></script>
-
-	<script type="text/template" id="thingspeak_initialize">
-		<h5>ThingSpeak Inititalisation</h5>
-		<div class="form-group">
-			<label for="channelid" class="control-label">Channel ID</label>
-			<input autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" type="text" value="<%= channelid %>"  name="channelid" class="channelid form-control input-sm">
-		</div>
-		<div class="form-group">
-			<label for="apikey" class="control-label">API Key</label>
-			<input autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" type="text" value="<%= apikey %>"  name="apikey" class="apikey form-control input-sm">
-		</div>
-	</script>
-
-	<script type="text/template" id="xively_initialize">
-		<h5>Xively Inititalisation</h5>
-		<div class="form-group">
-			<label for="feedid" class="control-label">Feed ID</label>
-			<input autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" type="text" value="<%= feedid %>"  name="feedid" class="feedid form-control input-sm">
-		</div>
-		<div class="form-group">
-			<label for="apikey" class="control-label">API Key</label>
-			<input autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" type="text" value="<%= apikey %>"  name="apikey" class="apikey form-control input-sm">
-		</div>
-	</script>
-
-	<script type="text/template" id="opensense_initialize">
-		<h5>OpenSenSe Inititalisation</h5>
-		<div class="form-group">
-			<label for="feedid" class="control-label">Feed ID</label>
-			<input autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" type="text" value="<%= feedid %>"  name="feedid" class="feedid form-control input-sm">
-		</div>
-		<div class="form-group">
-			<label for="apikey" class="control-label">API Key</label>
-			<input autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" type="text" value="<%= apikey %>"  name="apikey" class="apikey form-control input-sm">
-		</div>
-	</script>
-
-	<script type="text/template" id="devices_view">
-		<h5><%= title %></h5>
-		<% _.each( listItems, function( listItem ){ %>
-		<div class="form-group">
-			<div class="input-group input-group-sm">
-				<span class="input-group-addon">
-				<% if ( listItem.active) { %>
-					<input name="<%= listItem.id %>_activated" type="checkbox" checked="checked">
-				<% } else { %>
-					<input name="<%= listItem.id %>_activated" type="checkbox">
-				<% } %>
-				</span>
-				<input autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" type="text" name="<%= listItem.id %>_name" value="<%= listItem.name %>" class="form-control">
-				<span class="input-group-addon device-addon_current-value"><%= listItem.current_value %><%= listItem.symbol %></span>
-			</div>
-		</div>
-		<% }); %>
-		<button class="set btn btn-default">save</button>
-		<button class="reload btn btn-default">reload</button>
-		<button class="cancel btn btn-default">close</button>
-		<button class="edit btn btn-default">provider</button>
-	</script>
-
-	<script type="text/template" id="appconfig_template">
-		<h5>Application Settings</h5>
-		<div class="checkbox">
-			<label>
-				<% if ( show_points ) { %>
-					<input name="show_points" type="checkbox" checked="checked">
-				<% } else { %>
-					<input name="show_points" type="checkbox">
-				<% } %>			
-				 Show points
-			</label>
-		</div>
-		<div class="checkbox">
-			<label>
-				<% if ( show_lines ) { %>
-					<input name="show_lines" type="checkbox" checked="checked">
-				<% } else { %>
-					<input name="show_lines" type="checkbox">
-				<% } %>			
-				 Show lines
-			</label>
-		</div>
-		<button class="cancel btn btn-default">close</button>
-	</script>
-
-	<script type="text/template" id="provider_template">
-		<h5>Provider Settings</h5>
-		<div class="form-group">
-			<label for="name" class="control-label">Name</label>
-			<input autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" type="text" value="<%= name %>"  name="name" class="name form-control input-sm">
-		</div>
-		<button class="save btn btn-default">save</button>
-		<button class="delete btn btn-default">delete</button>
-		<button class="cancel btn btn-default">close</button>
-		<button class="devices btn btn-default">devices</button>
-	</script>
-
-	<script type="text/template" id="error_template">
-		<table class="center">
-		<tr>
-			<td><h4><%= headline %></h4></td>
-		</tr>
-		<tr>
-			<td><%= message %></td>
-		</tr>
-		<tr>
-			<td>
-				<div class="btn-group"><button class="ok btn btn-default">ok</button></div>
-			</td>
-		</tr>
-		</table>
-	</script>	
-
-	<script type="text/template" id="confirm_template">
-		<table class="center">
-		<tr>
-			<td><%= msg %></td>
-		</tr>
-		<tr>
-			<td>
-				<div class="btn-group">
-					<button class="yes btn btn-default">yes</button>
-					<button class="no btn btn-default">no</button>
-				</div>
-			</td>
-		</tr>
-		</table>
-	</script>
-
-	<script type="text/template" id="prompt_template">
-		<h5><%= text %></h5>
-		<div class="form-group">
-			<input id="prompt_value" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" type="text" value="<%= value %>"  class="value form-control input-sm">
-		</div>	
-		<button class="cancel btn btn-default">cancel</button>
-		<button class="ok btn btn-default">ok</button>
-	</script>
 </head>
 <body>
 <div class="wrapper">
@@ -612,6 +474,156 @@
 <div id="prompt" class="form">
 	<div class="prompt"></div>
 </div>
+
+<script type="text/template" id="drivers_view">
+	<h5>Provider Type</h5>
+	<div class="form-group">
+		<div class="drivers btn-group">
+		<% _.each( drivers, function( driver ) { %>
+			<button data-name="<%= driver.name %>" class="set btn btn-default"<% if (driver.disabled) { %>disabled="disabled"<% } %>><%= driver.name %></button>
+		<% }); %>
+		</div>
+	</div>
+</script>
+
+<script type="text/template" id="thingspeak_initialize">
+	<h5>ThingSpeak Inititalisation</h5>
+	<div class="form-group">
+		<label for="channelid" class="control-label">Channel ID</label>
+		<input autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" type="text" value="<%= channelid %>"  name="channelid" class="channelid form-control input-sm">
+	</div>
+	<div class="form-group">
+		<label for="apikey" class="control-label">API Key</label>
+		<input autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" type="text" value="<%= apikey %>"  name="apikey" class="apikey form-control input-sm">
+	</div>
+</script>
+
+<script type="text/template" id="xively_initialize">
+	<h5>Xively Inititalisation</h5>
+	<div class="form-group">
+		<label for="feedid" class="control-label">Feed ID</label>
+		<input autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" type="text" value="<%= feedid %>"  name="feedid" class="feedid form-control input-sm">
+	</div>
+	<div class="form-group">
+		<label for="apikey" class="control-label">API Key</label>
+		<input autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" type="text" value="<%= apikey %>"  name="apikey" class="apikey form-control input-sm">
+	</div>
+</script>
+
+<script type="text/template" id="opensense_initialize">
+	<h5>OpenSenSe Inititalisation</h5>
+	<div class="form-group">
+		<label for="feedid" class="control-label">Feed IDs (comma seperated)</label>
+		<input autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" type="text" value="<%= feedids %>"  name="feedids" class="feedids form-control input-sm">
+	</div>
+	<div class="form-group">
+		<label for="sense_key" class="control-label">API Key</label>
+		<input autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" type="text" value="<%= sense_key %>"  name="sense_key" class="sense_key form-control input-sm">
+	</div>
+</script>
+
+<script type="text/template" id="devices_view">
+	<h5><%= title %></h5>
+	<% _.each( listItems, function( listItem ){ %>
+	<div class="form-group">
+		<div class="input-group input-group-sm">
+			<span class="input-group-addon">
+			<% if ( listItem.active) { %>
+				<input name="<%= listItem.id %>_activated" type="checkbox" checked="checked">
+			<% } else { %>
+				<input name="<%= listItem.id %>_activated" type="checkbox">
+			<% } %>
+			</span>
+			<input autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" type="text" name="<%= listItem.id %>_name" value="<%= listItem.name %>" class="form-control">
+			<span class="input-group-addon device-addon_current-value"><%= listItem.current_value %><%= listItem.symbol %></span>
+		</div>
+	</div>
+	<% }); %>
+	<button class="set btn btn-default">save</button>
+	<button class="reload btn btn-default">reload</button>
+	<button class="cancel btn btn-default">close</button>
+	<button class="edit btn btn-default">provider</button>
+</script>
+
+<script type="text/template" id="appconfig_template">
+	<h5>Application Settings</h5>
+	<div class="checkbox">
+		<label>
+			<% if ( show_points ) { %>
+				<input name="show_points" type="checkbox" checked="checked">
+			<% } else { %>
+				<input name="show_points" type="checkbox">
+			<% } %>			
+			 Show points
+		</label>
+	</div>
+	<div class="checkbox">
+		<label>
+			<% if ( show_lines ) { %>
+				<input name="show_lines" type="checkbox" checked="checked">
+			<% } else { %>
+				<input name="show_lines" type="checkbox">
+			<% } %>			
+			 Show lines
+		</label>
+	</div>
+	<button class="cancel btn btn-default">close</button>
+</script>
+
+<script type="text/template" id="provider_template">
+	<h5>Provider Settings</h5>
+	<div class="form-group">
+		<label for="name" class="control-label">Name</label>
+		<input autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" type="text" value="<%= name %>"  name="name" class="name form-control input-sm">
+	</div>
+	<button class="save btn btn-default">save</button>
+	<button class="delete btn btn-default">delete</button>
+	<button class="cancel btn btn-default">close</button>
+	<% if ( show_devices_button ) { %>
+	<button class="devices btn btn-default">devices</button>
+	<% } %>
+</script>
+
+<script type="text/template" id="error_template">
+	<table class="center">
+	<tr>
+		<td><h4><%= headline %></h4></td>
+	</tr>
+	<tr>
+		<td><%= message %></td>
+	</tr>
+	<tr>
+		<td>
+			<div class="btn-group"><button class="ok btn btn-default">ok</button></div>
+		</td>
+	</tr>
+	</table>
+</script>	
+
+<script type="text/template" id="confirm_template">
+	<table class="center">
+	<tr>
+		<td><%= msg %></td>
+	</tr>
+	<tr>
+		<td>
+			<div class="btn-group">
+				<button class="yes btn btn-default">yes</button>
+				<button class="no btn btn-default">no</button>
+			</div>
+		</td>
+	</tr>
+	</table>
+</script>
+
+<script type="text/template" id="prompt_template">
+	<h5><%= text %></h5>
+	<div class="form-group">
+		<input id="prompt_value" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" type="text" value="<%= value %>"  class="value form-control input-sm">
+	</div>	
+	<button class="cancel btn btn-default">cancel</button>
+	<button class="ok btn btn-default">ok</button>
+</script>
 
 <script src="lib/main.js"></script>
 </body>
