--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@
 				</g>
 				</svg>
 				<div class="btn_grp">
+					<button class="left"></button>
+					<button class="right"></button>
 					<button class="today">Day</button>
 					<button class="now">Now</button>
 					<button class="set">Set</button>
