jQuery Flot Selection touchenabled

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 	<meta id="viewport" name="viewport" content ="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />	
 	<title>Internet of Things Viewer</title>
 
-<!--
+	<script src="lib/date.js"></script>
 	<link rel="stylesheet" href="contrib/bootstrap/css/bootstrap.css">
 	<link rel="stylesheet" href="styles/form.css"></link>
 	<link rel="stylesheet" href="styles/flot.css"></link>
 	<link rel="stylesheet" href="contrib/drumjs/drum.css"></link>
-	<link rel="stylesheet" href="styles/date_range.css"></link>
+	<link rel="stylesheet" href="styles/daterange.css"></link>
 	<link rel="stylesheet" href="styles/menu.css"></link>
 	<link rel="stylesheet" href="contrib/panelmenu/panelmenu.css"></link>
 	<link rel="stylesheet" href="styles/styles.css"></link>
@@ -29,6 +29,7 @@
 	<script src="lib/om/AppData.js"></script>
 	<script src="lib/om/AppDataList.js"></script>
 	<script src="lib/om/ProviderDriver.js"></script>
+	<script src="lib/om/ProviderDriverJsonP.js"></script>
 	<script src="lib/om/ProviderOpenSense.js"></script>
 	<script src="lib/om/ProviderThingSpeak.js"></script>
 	<script src="lib/om/ProviderXively.js"></script>
@@ -58,13 +59,15 @@
 
 	<script src="lib/views/PlotView.js"></script>
 	<script src="contrib/drumjs/drum.js"></script>
-	<script src="lib/date_range.js"></script>
+	<script src="lib/DateRange.js"></script>
 	<script src="lib/views/MenuView.js"></script>
 	<script src="contrib/panelmenu/panelmenu.js"></script>
 	<script src="lib/main.js"></script>
--->
+
+<!--
 	<link href="compile/styles.min.css" rel="stylesheet"></link>
 	<script rel="notcompile" src="compile/script.min.js"></script>
+-->
 </head>
 <body>
 <div class="wrapper">
