Application Cache enabled

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<html>
+<html manifest="iotviewer.appcache">
 <head>
 	<meta charset='utf-8'>
 	<meta id="viewport" name="viewport" content ="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />	
 	<title>Internet of Things Viewer</title>
-
+<!--
+	<script src="lib/appcache.js"></script>
 	<script src="lib/date.js"></script>
 	<link rel="stylesheet" href="contrib/bootstrap/css/bootstrap.css">
 	<link rel="stylesheet" href="styles/form.css"></link>
@@ -63,11 +64,9 @@
 	<script src="lib/views/MenuView.js"></script>
 	<script src="contrib/panelmenu/panelmenu.js"></script>
 	<script src="lib/main.js"></script>
-
-<!--
+-->
 	<link href="compile/styles.min.css" rel="stylesheet"></link>
 	<script rel="notcompile" src="compile/script.min.js"></script>
--->
 </head>
 <body>
 <div class="wrapper">
