--- a/index.html
+++ b/index.html
@@ -2,8 +2,19 @@
 <html>
 <head>
 	<meta charset='utf-8'>
+	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta id="viewport" name="viewport" content ="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />	
 	<title>Internet of Things Viewer</title>
+
+	<link rel="apple-touch-icon" sizes="57x57" href="/styles/icons/apple-touch-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="/styles/icons/apple-touch-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="/styles/icons/apple-touch-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="/styles/icons/apple-touch-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="/styles/icons/apple-touch-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="/styles/icons/apple-touch-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/styles/icons/apple-touch-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/styles/icons/apple-touch-icon-152x152.png">
+
 <!--
 	<script src="lib/appcache.js"></script>
 	<script src="lib/date.js"></script>
@@ -20,7 +31,6 @@
 	<script src="contrib/jsonp/jsonp.js"></script>
 	<script src="contrib/hammerjs/hammer.js"></script>
 	<script src="contrib/hammerjs/hammer.fakemultitouch.js"></script>
-
 	<script src="contrib/bootstrap/js/bootstrap.js"></script>
 
 	<script src="contrib/underscore/underscore.js"></script>
@@ -66,6 +76,7 @@
 	<script src="contrib/panelmenu/panelmenu.js"></script>
 	<script src="lib/main.js"></script>
 -->
+
 	<link href="compile/styles.min.css" rel="stylesheet"></link>
 	<script rel="notcompile" src="compile/script.min.js"></script>
 </head>
