--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta id="viewport" name="viewport" content ="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />	
 	<title>Internet of Things Viewer</title>
-	<link rel="apple-touch-icon" sizes="57x57" href="styles/icons/apple-touch-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="styles/icons/apple-touch-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="styles/icons/apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="styles/icons/apple-touch-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="styles/icons/apple-touch-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="styles/icons/apple-touch-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="styles/icons/apple-touch-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="styles/icons/apple-touch-icon-152x152.png">
-	<link href="compile/styles.min.css" rel="stylesheet"></link>
-	<script rel="notcompile" src="compile/script.min.js"></script>
+	<link rel="apple-touch-icon" sizes="57x57" href="styles/apple-touch-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="styles/apple-touch-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="styles/apple-touch-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="styles/apple-touch-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="styles/apple-touch-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="styles/apple-touch-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="styles/apple-touch-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="styles/apple-touch-icon-152x152.png">
+	<link rel="stylesheet" href="lib/styles.min.css" ></link>
+	<script rel="notcompile" src="lib/script.min.js"></script>
 </head>
 <body>
 <div class="wrapper">
