--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html manifest="iotviewer.appcache">
+<html>
 <head>
 	<meta charset='utf-8'>
 	<meta name="apple-mobile-web-app-capable" content="yes">
