Minifiy demo scripts and styles

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
 
 	<link rel="stylesheet" href="styles/tutorial.css"></link>
 	<script src="lib/views/TutorialView.js"></script>
+
+	<link href="compile/demo.min.css" rel="stylesheet"></link>
+	<script rel="notcompile" src="compile/demo.min.js"></script>	
 </head>
 <body>
 <div class="wrapper">
