--- a/index.html
+++ b/index.html
@@ -22,71 +22,8 @@
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="msapplication-TileImage" content="styles/mstile-144x144.png">
 
-	<script src="lib/appcache.js"></script>
-	<script src="lib/date.js"></script>
-	<link rel="stylesheet" href="contrib/bootstrap/css/bootstrap.css">
-	<link rel="stylesheet" href="styles/form.css"></link>
-	<link rel="stylesheet" href="styles/flot.css"></link>
-	<link rel="stylesheet" href="contrib/drumjs/drum.css"></link>
-	<link rel="stylesheet" href="styles/daterange.css"></link>
-	<link rel="stylesheet" href="styles/menu.css"></link>
-	<link rel="stylesheet" href="contrib/panelmenu/panelmenu.css"></link>
-	<link rel="stylesheet" href="styles/styles.css"></link>
-
-	<script src="contrib/jquery/jquery-1.9.1.js"></script>
-	<script src="contrib/jsonp/jsonp.js"></script>
-	<script src="contrib/hammerjs/hammer.js"></script>
-	<script src="contrib/hammerjs/hammer.fakemultitouch.js"></script>
-	<script src="contrib/bootstrap/js/bootstrap.js"></script>
-
-	<script src="contrib/underscore/underscore.js"></script>
-	<script src="contrib/backbone/backbone.js"></script>
-	<script src="contrib/backbone/backbone.localStorage.js"></script>
-	<script src="lib/backbone-overrides.js"></script>
-
-	<script src="lib/om/AppData.js"></script>
-	<script src="lib/om/AppDataList.js"></script>
-	<script src="lib/om/ProviderDriver.js"></script>
-	<script src="lib/om/ProviderDriverJsonP.js"></script>
-	<script src="lib/om/ProviderOpenSense.js"></script>
-	<script src="lib/om/ProviderThingSpeak.js"></script>
-	<script src="lib/om/ProviderXively.js"></script>
-	<script src="lib/om/ProviderDriverList.js"></script>
-	<script src="lib/om/Device.js"></script>
-	<script src="lib/om/DeviceList.js"></script>
-	<script src="lib/om/Provider.js"></script>
-	<script src="lib/om/ProviderList.js"></script>
-
-	<script src="lib/views/PromptView.js"></script>
-	<script src="lib/views/ConfirmView.js"></script>
-	<script src="lib/views/ErrorView.js"></script>
-	<script src="lib/views/AppView.js"></script>
-	<script src="lib/views/AppConfigView.js"></script>
-	<script src="lib/views/ProviderOpenSenseInitializeView.js"></script>
-	<script src="lib/views/ProviderThingSpeakInitializeView.js"></script>
-	<script src="lib/views/ProviderXivelyInitializeView.js"></script>
-	<script src="lib/views/DevicesView.js"></script>
-	<script src="lib/views/ProviderDriverView.js"></script>
-	<script src="lib/views/ProviderView.js"></script>
-
-	<script src="contrib/flot/jquery.flot.js"></script>
-	<script src="contrib/flot/jquery.flot.resize.js"></script>
-	<script src="contrib/flot/jquery.flot.crosshair.js"></script>
-	<script src="contrib/flot/jquery.flot.selection.js"></script>
-	<script src="contrib/flot/jquery.flot.time.js"></script>
-
-	<script src="lib/views/PlotView.js"></script>
-	<script src="contrib/drumjs/drum.js"></script>
-	<script src="lib/DateRange.js"></script>
-	<script src="lib/views/MenuView.js"></script>
-	<script src="contrib/panelmenu/panelmenu.js"></script>
-	<script src="lib/main.js"></script>
-
-	<link rel="stylesheet" href="styles/tutorial.css"></link>
-	<script src="lib/views/TutorialView.js"></script>
-
-	<link href="compile/demo.min.css" rel="stylesheet"></link>
-	<script rel="notcompile" src="compile/demo.min.js"></script>	
+	<link rel="stylesheet" href="compile/demo.min.css"></link>
+	<script src="compile/demo.min.js"></script>	
 </head>
 <body>
 <div class="wrapper">
